--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ BackEnd/__pycache__/admin.cpython-39.pyc
 *.pyc
 MakerCenter/__pycache__/settings.cpython-39.pyc
 MakerCenter/__pycache__/urls.cpython-39.pyc
+MakerCenter/__pycache__/settings.cpython-39.pyc
