--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ BackEnd/__pycache__/urls.cpython-39.pyc
 BackEnd/__pycache__/views.cpython-39.pyc
 MakerCenter/__pycache__/settings.cpython-39.pyc
 MakerCenter/__pycache__/urls.cpython-39.pyc
+BackEnd/__pycache__/views.cpython-39.pyc
+BackEnd/__pycache__/urls.cpython-39.pyc
+MakerCenter/__pycache__/settings.cpython-39.pyc
