--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ MakerCenter/__pycache__/urls.cpython-39.pyc
 BackEnd/__pycache__/views.cpython-39.pyc
 BackEnd/__pycache__/urls.cpython-39.pyc
 MakerCenter/__pycache__/settings.cpython-39.pyc
+MakerCenter/__pycache__/settings.cpython-39.pyc
+BackEnd/__pycache__/views.cpython-39.pyc
+BackEnd/__pycache__/urls.cpython-39.pyc
