--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ BackEnd/__pycache__/views.cpython-39.pyc
 BackEnd/__pycache__/urls.cpython-39.pyc
 BackEnd/__pycache__/models.cpython-39.pyc
 *.pyc
+BackEnd/__pycache__/urls.cpython-39.pyc
+BackEnd/__pycache__/views.cpython-39.pyc
