--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,9 @@ BackEnd/__pycache__/views.cpython-39.pyc
 BackEnd/__pycache__/urls.cpython-39.pyc
 BackEnd/__pycache__/models.cpython-39.pyc
 *.pyc
+BackEnd/__pycache__/models.cpython-39.pyc
+BackEnd/__pycache__/urls.cpython-39.pyc
+BackEnd/__pycache__/views.cpython-39.pyc
+MakerCenter/__pycache__/settings.cpython-39.pyc
+*.pyc
+MakerCenter/__pycache__/settings.cpython-39.pyc
