--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,7 @@ BackEnd/__pycache__/models.cpython-39.pyc
 *.pyc
 BackEnd/__pycache__/urls.cpython-39.pyc
 BackEnd/__pycache__/views.cpython-39.pyc
+BackEnd/__pycache__/models.cpython-39.pyc
+BackEnd/__pycache__/urls.cpython-39.pyc
+BackEnd/__pycache__/views.cpython-39.pyc
+MakerCenter/__pycache__/settings.cpython-39.pyc
