--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,122 @@
+altgraph==0.17.2
 asgiref==3.4.1
+async-generator==1.10
+attrs==21.2.0
+autopep8==1.5.7
 beautifulsoup4==4.10.0
 bootstrap-admin==0.4.4
-certifi==2021.10.8
-charset-normalizer==2.0.10
+boto==2.49.0
+bs4==0.0.1
+CacheControl==0.12.6
+cachetools==4.2.2
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.4
+click==8.0.1
+colorama==0.4.4
+configobj==5.0.6
+configparser==5.0.2
+crayons==0.4.0
+crypto==1.4.1
+cryptography==3.4.7
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==4.0.1
 django-admin-volt==0.0.5
 django-appconf==1.0.5
 django-ckeditor==6.2.0
-django-cleanup==6.0.0
+django-cleanup==5.2.0
 django-compressor==3.1
+django-cors-headers==3.11.0
 django-filter==21.1
 django-js-asset==2.0.0
-django-sass-processor==1.1
+django-sass-processor==0.5.4
+django-utils-six==2.0
+djangorestframework==3.12.4
+dnspython==1.16.0
+docxcompose==1.3.3
+docxtpl==0.14.2
+et-xmlfile==1.1.0
+firebase-admin==5.0.3
+freezegun==1.1.0
+future==0.18.2
+geckodriver-autoinstaller==0.1.0
+google-api-core==2.0.1
+google-api-python-client==2.22.0
+google-auth==2.2.0
+google-auth-httplib2==0.1.0
+google-cloud-core==2.0.0
+google-cloud-firestore==2.3.3
+google-cloud-storage==1.42.2
+google-crc32c==1.2.0
+google-resumable-media==2.0.3
+googleapis-common-protos==1.53.0
+grpcio==1.41.0
 gunicorn==20.1.0
-idna==3.3
+h11==0.12.0
+html5==0.0.9
+httplib2==0.19.1
+idna==3.2
+Jinja2==3.0.2
 libsass==0.21.0
-Pillow==9.0.0
+lxml==4.6.3
+mailmerge==2.2.0
+Markdown==3.3.4
+MarkupSafe==2.0.1
+msgpack==1.0.2
+Naked==0.1.31
+numpy==1.21.2
+openpyxl==3.0.9
+outcome==1.1.0
+packaging==21.0
+pandas==1.3.3
+pefile==2021.9.3
+Pillow==8.3.1
+proto-plus==1.19.0
+protobuf==3.18.0
+psycopg2==2.9.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.7.0
+pycparser==2.20
+pycryptodome==3.10.1
+pyinstaller==4.9
+pyinstaller-hooks-contrib==2022.2
+pymongo==3.12.0
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+python-dateutil==2.8.2
+python-docx==0.8.11
+python-http-client==3.3.3
+pytz==2021.1
+pywin32-ctypes==0.2.0
+PyYAML==5.4.1
 rcssmin==1.1.0
-requests==2.27.1
+requests==2.26.0
 rjsmin==1.2.0
+rsa==4.7.2
+selenium==4.0.0
+selenium-stealth==1.0.6
+sendgrid==6.8.2
+shellescape==3.8.1
 six==1.16.0
-soupsieve==2.3.1
-sqlparse==0.4.2
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.2.1
+sqlparse==0.4.1
+starkbank-ecdsa==1.1.1
 static3==0.7.0
+systematic==4.8.7
+toml==0.10.2
+trio==0.19.0
+trio-websocket==0.9.2
 tzdata==2021.5
-urllib3==1.26.8
+undetected-chromedriver==3.0.5
+uritemplate==3.0.1
+urllib3==1.26.6
+webdriver-manager==3.5.1
+webencodings==0.5.1
+websockets==10.1
 whitenoise==6.0.0
+wsproto==1.0.0
+xlrd==2.0.1
