--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ djangorestframework==3.12.4
 dnspython==1.16.0
 docxcompose==1.3.3
 docxtpl==0.14.2
+engineering-notation==0.6.0
 et-xmlfile==1.1.0
 firebase-admin==5.0.3
 freezegun==1.1.0
@@ -107,6 +108,7 @@ sqlparse==0.4.1
 starkbank-ecdsa==1.1.1
 static3==0.7.0
 systematic==4.8.7
+tk-tools==0.14.0
 toml==0.10.2
 trio==0.19.0
 trio-websocket==0.9.2
